Fix body jumping on nav collapse

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -38,7 +38,7 @@
 }
 
 .Nav--hidden {
-  display: none !important;
+  visibility: hidden;
 }
 
 .Nav--mobile-links-container {
